--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -12,14 +12,15 @@
             <h1>Create Account</h1>
             <form id="registerForm">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required/>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required/>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
 
                 <button type="submit">Register</button>
             </form>
             <div id="errorMessage"></div>
+            <div id="successMessage"></div>
         </div>
 
         <script src="../js/register.js"></script>
