Improve login page error handling and responsive layout

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -20,6 +20,7 @@
                 <button type="submit">Login</button>
             </form>
             <div id="errorMessage"></div>
+            <div id="successMessage"></div>
         </div>
 
         <script src="../js/login.js"></script>
