Sprint1: Demo, connecting frontend and backend without Database

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -13,18 +13,15 @@
   <section id="viewMode" class="profile-card">
     <img id="viewAvatar" class="avatar" src="https://i.pravatar.cc/150?img=12" />
 
-    <h1 id="viewName">Alex Chen</h1>
-    <p id="viewCountry">Ireland</p>
-    <p id="viewSector">Tech, AI</p>
+    <h1 id="viewName"></h1>
+    <p id="viewCountry"></p>
+    <p id="viewSector"></p>
 
     <div id="viewSkills" class="skills">
-      <span class="skill">Product Management</span>
-      <span class="skill">Marketing</span>
+      <!-- filled by JS from profile -->
     </div>
 
-    <p id="viewBio" class="bio">
-      Looking for a technical co-founder.
-    </p>
+    <p id="viewBio" class="bio"></p>
 
     <button id="editBtn" class="primary-btn">Edit Profile</button>
     <button id="logoutBtn">Logout</button>
@@ -43,13 +40,13 @@
 </div>
 
     <label>Full Name</label>
-    <input id="nameInput" value="Alex Chen" />
+    <input id="nameInput" placeholder="Your name" />
 
     <label>Country</label>
-    <input id="countryInput" value="Ireland" />
+    <input id="countryInput" placeholder="Country" />
 
     <label>Sector</label>
-    <input id="sectorInput" value="Tech, AI" />
+    <input id="sectorInput" placeholder="e.g. Tech, AI" />
 
     <label>Select Your Skills</label>
     <div id ="skillsContainer" class="skills-list">
@@ -58,7 +55,7 @@
     
 
     <label>Short Bio</label>
-    <textarea id="bioInput" maxlength="100">Looking for a technical co-founder.</textarea>
+    <textarea id="bioInput" maxlength="100" placeholder="A short bio about you"></textarea>
 
     <div class="actions">
       <button id="saveBtn" class="primary-btn">Save</button>
